--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./build/bundle.js"
+    "dev": "npm-run-all --parallel dev:**",
+    "dev:start": "nodemon ./build/bundle.js",
+    "dev:build": "webpack --config webpack.server.js --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "react": "^16.8.3"
+    "nodemon": "^1.18.10",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
@@ -20,6 +24,7 @@
     "babel-loader": "^8.0.5",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.0",
     "webpack-node-externals": "^1.7.2"
   }
 }
