--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.16.4",
     "nodemon": "^1.18.10",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react-dom": "^16.8.3",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
